<ScrollView android:id="@+id/detailsScrollView"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <GridLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:useDefaultMargins="true">

        <TextView
            android:id="@+id/nameLabelTextView"
            style="@style/ContactLableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="0"
            android:text="@string/lable_name"/>

        <TextView
            android:id="@+id/nameTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="0"/>

        <TextView
            android:id="@+id/phoneLabelTextView"
            style="@style/ContactLableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="1"
            android:text="@string/lable_phone"/>

        <TextView
            android:id="@+id/phoneTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="1"/>

        <TextView
            android:id="@+id/emailLabelTextView"
            style="@style/ContactLableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="2"
            android:text="@string/lable_email"/>

        <TextView
            android:id="@+id/emailTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="2"/>

        <TextView
            android:id="@+id/streetLabelTextView"
            style="@style/ContactLableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="3"
            android:text="@string/lable_street"/>

        <TextView
            android:id="@+id/streetTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="3"/>

        <TextView
            android:id="@+id/cityLabelTextView"
            style="@style/ContactLableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="4"
            android:text="@string/lable_city"/>

        <TextView
            android:id="@+id/cityTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="4"/>

        <TextView
            android:id="@+id/stateLabelTextView"
            style="@style/ContactLableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="5"
            android:text="@string/lable_state"/>

        <TextView
            android:id="@+id/stateTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="5"/>

        <TextView
            android:id="@+id/zipLabelTextView"
            style="@style/ContactLableTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="0"
            android:layout_row="6"
            android:text="@string/lable_zip"/>

        <TextView
            android:id="@+id/zipTextView"
            style="@style/ContactTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_row="6"/>
    </GridLayout>
</ScrollView>